--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,96 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  height: 100vh;
+}
+
+/*---Azulejos--- 
+body {
+    background: 
+      radial-gradient(black 3px, transparent 4px),
+      radial-gradient(black 3px, transparent 4px),
+      linear-gradient(#fff 4px, transparent 0),
+      linear-gradient(45deg, transparent 74px, transparent 75px, #a4a4a4 75px, #a4a4a4 76px, transparent 77px, transparent 109px),
+      linear-gradient(-45deg, transparent 75px, transparent 76px, #a4a4a4 76px, #a4a4a4 77px, transparent 78px, transparent 109px),
+    #fff;
+    background-size: 109px 109px, 109px 109px,100% 6px, 109px 109px, 109px 109px;
+    background-position: 54px 55px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+  }
+*/
+/*  ---Cuadrados 3D---
+$color2: #80c9dd;
+$color3: #d5eaf0;
+$color1: #62bbd3;
+
+body {
+  background-color: $color1;
+  background-image: linear-gradient(
+      30deg,
+      $color2 12%,
+      transparent 12.5%,
+      transparent 87%,
+      $color2 87.5%,
+      $color2
+    ),
+    linear-gradient(
+      150deg,
+      $color2 12%,
+      transparent 12.5%,
+      transparent 87%,
+      $color2 87.5%,
+      $color2
+    ),
+    linear-gradient(
+      30deg,
+      $color2 12%,
+      transparent 12.5%,
+      transparent 87%,
+      $color2 87.5%,
+      $color2
+    ),
+    linear-gradient(
+      150deg,
+      $color2 12%,
+      transparent 12.5%,
+      transparent 87%,
+      $color2 87.5%,
+      $color2
+    ),
+    linear-gradient(
+      60deg,
+      $color3 25%,
+      transparent 25.5%,
+      transparent 75%,
+      $color3 75%,
+      $color3
+    ),
+    linear-gradient(
+      60deg,
+      $color3 25%,
+      transparent 25.5%,
+      transparent 75%,
+      $color3 75%,
+      $color3
+    );
+  background-size: 40px 70px;
+  background-position: 0 0, 0 0, 20px 35px, 20px 35px, 0 0, 20px 35px;
+}
+
+$color2-1: #fff;
+
+body1 {
+  background-color: #62bbd3;
+  background-image: radial-gradient($color2-1 9px, transparent 10px),
+    repeating-radial-gradient(
+      $color2-1 0,
+      $color2-1 4px,
+      transparent 5px,
+      transparent 20px,
+      $color2-1 21px,
+      $color2-1 25px,
+      transparent 26px,
+      transparent 50px
+    );
+  background-size: 30px 30px, 90px 90px;
+  background-position: 0 0;
+}
+*/
