--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
     <div class="card ">
         <div class="card-body " >
             <div class="card-title bg-primary text-white">
-                <p class="p-2 ">Insert a new car</p>
+                <p class="p-2 ">Car Details</p>
             </div>
             <div class="form-group m-2">
                 <input type="text" [(ngModel)]="selectedCar.brand" placeholder="Brand" class="form-control">
@@ -37,6 +37,12 @@
             </div>
             <div class="form-group m-2">
                 <input type="text" [(ngModel)]="selectedCar.id" placeholder="Id" class="form-control">
+            </div>
+            <div class="form-group m-2">
+                <input type="text" [(ngModel)]="selectedCar.created_at" disabled placeholder="Created at" class="form-control">
+            </div>
+            <div class="form-group m-2">
+                <input type="text" [(ngModel)]="selectedCar.last_updated" disabled placeholder="Last updated" class="form-control">
             </div>
             <div class="form-group m-2">
             <button (click)="add(car)" class="btn btn-primary">
