--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,12 @@
                 <input type="text" [(ngModel)]="selectedCar.id" placeholder="Id" class="form-control">
             </div>
             <div class="form-group m-2">
+                <input type="text" [(ngModel)]="selectedCar.created_at" disabled placeholder="Created at" class="form-control">
+            </div>
+            <div class="form-group m-2">
+                <input type="text" [(ngModel)]="selectedCar.last_updated" disabled placeholder="Last updated" class="form-control">
+            </div>
+            <div class="form-group m-2">
             <button (click)="add(car)" class="btn btn-primary">
                 Submit
             </button>
