--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="container bg-dark">
-
-        <table class="table table-striped table-hover mt-4" >
+    <form>
+        <div class="form-group form-inline">
+            Full text search: <input class="form-control ml-2" type="text" [formControl]="filter"/>
+        </div>
+      </form>
+        <table class="table table-striped table-hover mt-4"  >
                 <thead class="thead-dark">
                 <tr id="table-title">
                   <th scope="col" >ID</th>
@@ -12,9 +16,9 @@
                 <tbody *ngIf="cars">
                 <tr *ngFor="let car of cars" (click)="openForEdit(car)" class="bg-white">
                   <th scope="row">{{ car.id }}</th>
-                  <td>{{ car.brand}}</td>
+                  <td><ngb-highlight [result]="car.brand" [term]="filter.value"></ngb-highlight></td>
                   <td>{{ car.country }}</td>
-                  <td>{{car.registration | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                  <td><ngb-highlight [result]="car.registration  | date:'yyyy-MM-dd HH:mm:ss'" [term]="filter.value"></ngb-highlight></td>
                 </tr>
                 </tbody>
               </table>
