--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 th:not(#table-title>th),td{
     text-align: center;
 }
+input.required.ng-invalid.ng-touched{
+    border-left: 5px solid red;
+}
+input.required.ng-valid.ng-touched{
+    border-left: 5px solid green;
+}
