--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container bg-dark">
     <form class="bg-white mt-2">
         <div class="form-group form-inline ">
-            Full text search: <input class="form-control ml-2" type="text" [formControl]="filter"/>
+            Search: <input class="form-control ml-2" type="text" [formControl]="filter"/>
         </div>
       </form>
         <table class="table table-striped table-hover mt-4"  >
@@ -41,7 +41,7 @@
                     [(ngModel)]="selectedCar.registration" placeholder="Registration" class="form-control">
             </div>
             <div class="form-group m-2">
-                <input type="text" [(ngModel)]="selectedCar.id" placeholder="Id" class="form-control">
+                <input type="text" [(ngModel)]="selectedCar.id" disabled placeholder="Id" class="form-control">
             </div>
             <div class="form-group m-2">
                 <input type="text" [(ngModel)]="selectedCar.created_at" disabled placeholder="Created at" class="form-control">
